update: ipywui docs

--- a/docs/ipywui/component/file-upload.ipynb
+++ b/docs/ipywui/component/file-upload.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "f5928b17-e8c8-47b0-9774-a8bb1f7e6af3",
    "metadata": {},
    "outputs": [
@@ -75,13 +75,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"vue\": \"<template>\\n  <FileUpload v-model=\\\"files.value\\\" accept=\\\".txt\\\"></FileUpload>\\n  <Input label=\\\"file info\\\"\\n         :value=\\\"upload_file.value\\\"\\n         type=\\\"textarea\\\"\\n         style=\\\"height: 200px\\\"\\n  ></Input>\\n</template>\\n\\n<script src=\\\"./basic_setup.py\\\"></script>\\n<script setup>\\nimport FileUpload from \\\"../../../src/ipywui/components/FileUpload\\\";\\nimport Input from \\\"../../../src/ipywui/components/Input\\\";\\n</script>\", \"setup\": \"import codecs\\nimport json\\n\\nfrom vuepy import computed\\nfrom vuepy import ref\\n\\n\\ndef setup(props, ctx, vm):\\n    files = ref([])\\n\\n    def get_first_file():\\n        file_info = {}\\n        if files.value:\\n            file_info = files.value[0]\\n            content = file_info['content']\\n            file_info['content'] = codecs.decode(content, encoding='utf-8')\\n            file_info['last_modified'] = str(file_info['last_modified'])\\n\\n        return json.dumps(file_info, indent=2)\\n\\n    upload_file = computed(get_first_file)\\n\\n    return locals()\\n\"}\n"
+      "{\"vue\": \"<template>\\n  <FileUpload v-model=\\\"files.value\\\" accept=\\\".txt\\\"></FileUpload>\\n  <Input label=\\\"file info\\\"\\n         :value=\\\"upload_file.value\\\"\\n         type=\\\"textarea\\\"\\n         style=\\\"height: 200px\\\"\\n  ></Input>\\n</template>\\n\\n<script src=\\\"./basic_setup.py\\\"></script>\\n<script setup>\\nimport FileUpload from \\\"../../../src/ipywui/components/FileUpload\\\";\\nimport Input from \\\"../../../src/ipywui/components/Input\\\";\\n</script>\", \"setup\": \"# ./basic_setup.py\\n\\nimport codecs\\nimport json\\n\\nfrom vuepy import computed\\nfrom vuepy import ref\\n\\n\\ndef setup(props, ctx, vm):\\n    files = ref([])\\n\\n    def get_first_file():\\n        file_info = {}\\n        if files.value:\\n            file_info = files.value[0]\\n            content = file_info['content']\\n            file_info['content'] = codecs.decode(content, encoding='utf-8')\\n            file_info['last_modified'] = str(file_info['last_modified'])\\n\\n        return json.dumps(file_info, indent=2)\\n\\n    upload_file = computed(get_first_file)\\n\\n    return locals()\\n\"}\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "570dc779000e4d419428f56280d06cce",
+       "model_id": "03aeff4a340848f085af1c623629a62a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -89,7 +89,7 @@
        "Document(children=(Dom(children=(MessageWidget(message_options={'message': '', 'type': 'info', 'show_close': F…"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -149,19 +149,41 @@
   "widgets": {
    "application/vnd.jupyter.widget-state+json": {
     "state": {
-     "02d3a6b2bf314b60a1db3d076a7ccbf8": {
+     "03aeff4a340848f085af1c623629a62a": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "VBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_37202fc3d8414f7eb2bbda8bdbd51519"
+       ],
+       "layout": "IPY_MODEL_3b7ceb81dc6d45d3981fe72578743b4c"
+      }
+     },
+     "14cea77be90245f288226c58c486ea21": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "TextareaModel",
       "state": {
        "continuous_update": false,
        "description": "file info",
-       "layout": "IPY_MODEL_4004dc65ee2b4f7283793e1b490d46c9",
-       "style": "IPY_MODEL_7a2c6190556c402687aa5cee109a5afb",
+       "layout": "IPY_MODEL_d4e4df1a8b424bb3821677bf0065fcbc",
+       "style": "IPY_MODEL_6b1017656b904b98af506a3888bce6d3",
        "value": "{}"
       }
      },
-     "10678d1ee33c4c818b827c0bdaf891e8": {
+     "1a5e0e3bd6424b578d448f8ba776e7b2": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "FileUploadModel",
+      "state": {
+       "accept": ".txt",
+       "description_allow_html": false,
+       "layout": "IPY_MODEL_b0936091b5544f1bbd5d6f248df6f3cf",
+       "style": "IPY_MODEL_4042fc31fca643eeb92ca6246d298064"
+      }
+     },
+     "2e40a6f3e07344beba66d93ce90111d1": {
       "model_module": "anywidget",
       "model_module_version": "0.9.3",
       "model_name": "AnyModel",
@@ -176,7 +198,7 @@
        "_view_module_version": "0.9.3",
        "_view_name": "AnyView",
        "close_msg_id": "",
-       "layout": "IPY_MODEL_9402d3380bdc49ff927cd0af210e8c77",
+       "layout": "IPY_MODEL_e1681598ee81491a8be52beb2995f675",
        "message_options": {
         "duration": 3000,
         "message": "",
@@ -185,13 +207,26 @@
        }
       }
      },
-     "10c60d9978ad4ad197d754dcd3f5047c": {
+     "37202fc3d8414f7eb2bbda8bdbd51519": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "VBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_2e40a6f3e07344beba66d93ce90111d1",
+        "IPY_MODEL_2e40a6f3e07344beba66d93ce90111d1",
+        "IPY_MODEL_45cd770deff04996bdf756ba4a9ba790"
+       ],
+       "layout": "IPY_MODEL_e8dc2383ebd744c586d7aed1402f76f1"
+      }
+     },
+     "3b7ceb81dc6d45d3981fe72578743b4c": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "1814c4e561d54740845d453960798e67": {
+     "4042fc31fca643eeb92ca6246d298064": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "ButtonStyleModel",
@@ -205,21 +240,21 @@
        "text_decoration": null
       }
      },
-     "2c46d94f4c104995b456443d4b179db1": {
+     "45cd770deff04996bdf756ba4a9ba790": {
       "model_module": "@jupyter-widgets/output",
       "model_module_version": "1.0.0",
       "model_name": "OutputModel",
       "state": {
-       "layout": "IPY_MODEL_a4af09ea2e8345fb89ae19b48e27fd05",
+       "layout": "IPY_MODEL_b13775e1ab0b40f0a65194c5fba3cdf1",
        "outputs": [
         {
          "data": {
           "application/vnd.jupyter.widget-view+json": {
-           "model_id": "2d0a43d7cd9b491cb640790e32b19366",
+           "model_id": "c910601b5357446b86a2cd99e1879f84",
            "version_major": 2,
            "version_minor": 0
           },
-          "text/plain": "VBox(children=(FileUpload(value=(), accept='.txt', description='Upload'), Textarea(value='{}', continuous_upda…"
+          "text/plain": "sfc_container(children=(VBox(children=(FileUpload(value=(), accept='.txt', description='Upload'), Textarea(val…"
          },
          "metadata": {},
          "output_type": "display_data"
@@ -227,50 +262,21 @@
        ]
       }
      },
-     "2d0a43d7cd9b491cb640790e32b19366": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "VBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_dbd3a038b5bd4da99b221057d1880797",
-        "IPY_MODEL_02d3a6b2bf314b60a1db3d076a7ccbf8"
-       ],
-       "layout": "IPY_MODEL_2dcedd7fb51a42d3b4e95e5be7d61d10"
-      }
-     },
-     "2dcedd7fb51a42d3b4e95e5be7d61d10": {
+     "48baf9b44dc54266b32aefc96d01809a": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "4004dc65ee2b4f7283793e1b490d46c9": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
+     "6a347f50cd2a430ba6fa9c08ffbc5ad6": {
+      "model_module": "@jupyter-widgets/output",
+      "model_module_version": "1.0.0",
+      "model_name": "OutputModel",
       "state": {
-       "height": "200px"
+       "layout": "IPY_MODEL_74389e802c674d13b0f0435c3964a188"
       }
      },
-     "4dd30fa4de2d4025bafd24b57621fabe": {
-      "model_module": "@jupyter-widgets/base",
-      "model_module_version": "2.0.0",
-      "model_name": "LayoutModel",
-      "state": {}
-     },
-     "570dc779000e4d419428f56280d06cce": {
-      "model_module": "@jupyter-widgets/controls",
-      "model_module_version": "2.0.0",
-      "model_name": "VBoxModel",
-      "state": {
-       "children": [
-        "IPY_MODEL_a6d56155f03c4d0dbf04afec1202979f"
-       ],
-       "layout": "IPY_MODEL_10c60d9978ad4ad197d754dcd3f5047c"
-      }
-     },
-     "7a2c6190556c402687aa5cee109a5afb": {
+     "6b1017656b904b98af506a3888bce6d3": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "TextStyleModel",
@@ -280,46 +286,102 @@
        "text_color": null
       }
      },
-     "9402d3380bdc49ff927cd0af210e8c77": {
+     "74389e802c674d13b0f0435c3964a188": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "a4af09ea2e8345fb89ae19b48e27fd05": {
+     "930fa3bccbbe4212a8e4fae55c73ac3c": {
+      "model_module": "anywidget",
+      "model_module_version": "0.9.3",
+      "model_name": "AnyModel",
+      "state": {
+       "_anywidget_id": "ipywui.widgets.custom.message.MessageWidget",
+       "_css": ".wui-message-root {\n    display: flex;\n    position: absolute;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message-container {\n    align-items: center;\n    display: flex;\n    flex-direction: column-reverse;\n    justify-content: center;\n    min-height: 100%;\n    outline: none;\n    width: 100%;\n\n    -webkit-tap-highlight-color: rgba(0,0,0,0);\n    bottom: 0;\n    left: 0;\n    right: 0;\n    top: 0;\n}\n\n.wui-message--success {\n    --wui-message-bg-color: #f0f9eb;\n    --wui-message-border-color: #e1f3d8;\n    --wui-message-text-color: #67c23a;\n}\n.wui-message--warning {\n    --wui-message-bg-color: #fdf6ec;\n    --wui-message-border-color: #faecd8;\n    --wui-message-text-color: #e6a23c;\n}\n.wui-message--info {\n    --wui-message-bg-color: #f4f4f5;\n    --wui-message-border-color: #e9e9eb;\n    --wui-message-text-color: #909399;\n}\n.wui-message--error {\n    --wui-message-bg-color: #fef0f0;\n    --wui-message-border-color: #fde2e2;\n    --wui-message-text-color: #f56c6c;\n}\n\n@keyframes msg-open {\n    0% {\n        opacity: 0;\n        -webkit-transform: translateY(-120%);\n        transform: translateY(-120%)\n    }\n    to {\n        -webkit-transform: translateY(0);\n        transform: translateY(0)\n    }\n}\n\n@keyframes msg-close {\n    0% {\n        opacity: 1;\n        -webkit-transform: scale(1);\n        transform: scale(1)\n    }\n    to {\n        opacity: 0;\n        -webkit-transform: scale(.9);\n        transform: scale(.9)\n    }\n}\n.wui-message[data-state=entered],.wui-message[data-state=entering] {\n    -webkit-animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both;\n    animation: msg-open .24s cubic-bezier(.175,.885,.32,1.175) both\n}\n\n.wui-message[data-state=exiting] {\n    -webkit-animation: msg-close .12s cubic-bezier(.4,0,1,1) both;\n    animation: msg-close .12s cubic-bezier(.4,0,1,1) both\n}\n\n.wui-message {\n    width: -webkit-fit-content;\n    width: -moz-fit-content;\n    width: fit-content;\n    z-index: 2004;\n    max-width: calc(100% - 32px);\n    margin-top: 8px;\n    box-sizing: border-box;\n    /*border-radius: var(--wui-border-radius-base);*/\n    /*border-width: var(--wui-border-width);*/\n    /*border-style: var(--wui-border-style);*/\n    border-color: var(--wui-message-border-color);\n    /*left: 50%;*/\n    /*top: 20px;*/\n    /*transform: translateX(-50%);*/\n    background-color: var(--wui-message-bg-color);\n    /*transition: opacity var(--wui-transition-duration),transform .4s,top .4s;*/\n    /*padding: var(--wui-message-padding);*/\n    display: flex;\n    align-items: center;\n}\n\n/*.wui-message--success */\n.wui-message__content {\n    color: var(--wui-message-text-color);\n    font-size: 14px;\n    line-height: 18px;\n    margin: 10px 14px 10px 14px;\n    overflow-wrap: break-word;\n}\n\n.wui-message__closeBtn {\n    /*cursor: pointer;*/\n    font-style: normal;\n    /*color: gray;*/\n    padding-right: 14px;\n    /*font-size: 13px;*/\n    user-select: none;\n\n    background: transparent;\n    border: none;\n    color: gray;\n    cursor: pointer;\n    font-size: 13px;\n    font-weight: 400;\n    line-height: 1;\n    outline: none;\n    /*padding: 4px;*/\n    text-align: center;\n    transition: opacity .3s;\n    /*width: 100%;*/\n}",
+       "_esm": "function closeMsg(msgDom) {\n  if (!msgDom) {\n    return;\n  }\n  msgDom.setAttribute('data-state', 'exiting');\n  msgDom.remove();\n}\n\nfunction createMsg(options) {\n  const {message, msg_id, type = 'info', show_close = false} = options;\n  const msgDom = document.createElement('div');\n  msgDom.className += ` wui-message--${type} wui-message`;\n  msgDom.setAttribute('data-state', 'entered');\n  msgDom.setAttribute('id', msg_id);\n  const msgContent = document.createElement('p');\n  msgContent.className += ` wui-message--${type} wui-message__content`;\n  msgContent.innerText = message;\n  msgDom.appendChild(msgContent);\n  if (show_close) {\n    const closeBtn = document.createElement('i');\n    closeBtn.className += 'wui-message__closeBtn';\n    closeBtn.innerText = 'x';\n    closeBtn.addEventListener('click', (ev) => {\n      closeMsg(msgDom);\n    })\n    msgDom.appendChild(closeBtn);\n  }\n  return msgDom;\n}\n\nexport async function render(view) {\n  let model = view.model;\n  const msgRoot = view.el;\n  msgRoot.className += ' wui-message-root'\n\n  const msgContainer = document.createElement('div');\n  msgContainer.className += ' wui-message-container';\n  msgRoot.appendChild(msgContainer)\n\n  model.on(\"change:message_options\", () => {\n    const options = model.get(\"message_options\");\n    const msg = createMsg(options);\n    msgContainer.appendChild(msg);\n    const {duration = 3000} = options;\n    if (duration > 0) {\n      setTimeout(() => {\n        closeMsg(msg)\n      }, duration);\n    }\n  })\n\n  model.on(\"change:close_msg_id\", () => {\n    const msg_id = model.get(\"close_msg_id\");\n    const msgDom = document.getElementById(msg_id);\n    closeMsg(msgDom);\n  })\n}\n",
+       "_model_module": "anywidget",
+       "_model_module_version": "0.9.3",
+       "_model_name": "AnyModel",
+       "_view_module": "anywidget",
+       "_view_module_version": "0.9.3",
+       "_view_name": "AnyView",
+       "close_msg_id": "",
+       "layout": "IPY_MODEL_f6c978350d2c4ef6bef4f63eb0524de1",
+       "message_options": {
+        "duration": 3000,
+        "message": "",
+        "show_close": false,
+        "type": "info"
+       }
+      }
+     },
+     "b0936091b5544f1bbd5d6f248df6f3cf": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "a6d56155f03c4d0dbf04afec1202979f": {
+     "b13775e1ab0b40f0a65194c5fba3cdf1": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c16a3c1430c54c1faad9f2d9650ff6f1": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "c910601b5357446b86a2cd99e1879f84": {
       "model_module": "@jupyter-widgets/controls",
       "model_module_version": "2.0.0",
       "model_name": "VBoxModel",
       "state": {
        "children": [
-        "IPY_MODEL_10678d1ee33c4c818b827c0bdaf891e8",
-        "IPY_MODEL_2c46d94f4c104995b456443d4b179db1"
+        "IPY_MODEL_ccb0c9d3225f43459c34ac1878754f55"
        ],
-       "layout": "IPY_MODEL_4dd30fa4de2d4025bafd24b57621fabe"
+       "layout": "IPY_MODEL_c16a3c1430c54c1faad9f2d9650ff6f1"
       }
      },
-     "cf9a727931f7410cb98180a21717b87b": {
+     "ccb0c9d3225f43459c34ac1878754f55": {
+      "model_module": "@jupyter-widgets/controls",
+      "model_module_version": "2.0.0",
+      "model_name": "VBoxModel",
+      "state": {
+       "children": [
+        "IPY_MODEL_1a5e0e3bd6424b578d448f8ba776e7b2",
+        "IPY_MODEL_14cea77be90245f288226c58c486ea21"
+       ],
+       "layout": "IPY_MODEL_48baf9b44dc54266b32aefc96d01809a"
+      }
+     },
+     "d4e4df1a8b424bb3821677bf0065fcbc": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {
+       "height": "200px"
+      }
+     },
+     "e1681598ee81491a8be52beb2995f675": {
       "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
       "model_name": "LayoutModel",
       "state": {}
      },
-     "dbd3a038b5bd4da99b221057d1880797": {
-      "model_module": "@jupyter-widgets/controls",
+     "e8dc2383ebd744c586d7aed1402f76f1": {
+      "model_module": "@jupyter-widgets/base",
       "model_module_version": "2.0.0",
-      "model_name": "FileUploadModel",
-      "state": {
-       "accept": ".txt",
-       "description_allow_html": false,
-       "layout": "IPY_MODEL_cf9a727931f7410cb98180a21717b87b",
-       "style": "IPY_MODEL_1814c4e561d54740845d453960798e67"
-      }
+      "model_name": "LayoutModel",
+      "state": {}
+     },
+     "f6c978350d2c4ef6bef4f63eb0524de1": {
+      "model_module": "@jupyter-widgets/base",
+      "model_module_version": "2.0.0",
+      "model_name": "LayoutModel",
+      "state": {}
      }
     },
     "version_major": 2,
