bugfix: 1. Change display to append_output_data 2. Fix app.ipynb execution path 3. Fix error when vbox v-for is html

--- a/src/vuepy/cli/template_vue/app.ipynb
+++ b/src/vuepy/cli/template_vue/app.ipynb
@@ -11,7 +11,7 @@
     "from pathlib import Path\n",
     "from vuepy import create_app, import_sfc\n",
     "\n",
-    "App= import_sfc(Path().absolute().parent / 'App.vue')\n",
+    "App= import_sfc(Path().absolute() / 'App.vue')\n",
     "app = create_app(App)\n",
     "app.mount()"
    ]
