update system_prompt_vuepy_examples.ipynb add <script setup>

--- a/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_vuepy_examples.ipynb
@@ -83,6 +83,8 @@
     "\n",
     "`<script lang='py'>`和`<script src=\"./xxx.py\"></script>`只能选一种\n",
     "\n",
+    "`<script setup>`：只作为IDE的自动补全提示使用，对实际运行没有影响。\n",
+    "\n",
     "`<style>`：暂不支持\n"
    ]
   },
