update system_prompt_ipywui_examples.ipynb add button @click

--- a/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
+++ b/examples/sho/prompts/system_prompt_ipywui_examples.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "##ignore\n",
     "import os\n",
     "import pathlib\n",
     "from vuepy.utils import magic\n",
@@ -19,7 +20,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Component, Button"
+    "### Component, Button\n",
+    "\n",
+    "对于click的事件处理函数有两种方式：\n",
+    "1. 指定参数的方式：`@click=far()` 或 `@click=far(arg)`\n",
+    "2. 不指定参数的方式：`@click=handle`，会自动传入btn参数(当前按钮的widget对象)，所以handle函数必须接受一个参数：\n",
+    "```python\n",
+    "def handle(btn):\n",
+    "  ...\n",
+    "```"
    ]
   },
   {
@@ -12140,7 +12149,6 @@
       "model_name": "FigureModel",
       "state": {
        "_config": {
-        "editSelection": false,
         "plotlyServerURL": "https://plot.ly"
        },
        "_data": [
@@ -12993,7 +13001,7 @@
        "_py2js_removeTraceProps": {},
        "_py2js_restyle": {},
        "_py2js_update": {},
-       "_view_count": 1
+       "_view_count": 2
       }
      },
      "b327b36bb2604bf1aa13cd792c67808c": {
